<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:layout_width="222dp"
    tools:layout_height="250dp"
    android:theme="@style/RightMenuDay"
    android:background="@color/accentDay"
    android:layout_marginTop="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informasi_kendaraan"
        android:textColor="?android:attr/textColorSecondary"
        android:fontFamily="@font/rajdhani_medium"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!-- MOTOR INFORMATION -->
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/subtitle_motor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/motor"
        android:textColor="?android:attr/textColor"
        android:fontFamily="@font/rajdhani_medium"
        android:layout_marginTop="0dp"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        />
    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="?android:attr/textColorSecondary"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_id_motor"
        android:textColor="?android:attr/textColorSecondary"
        android:fontFamily="@font/rajdhani_regular"
        app:layout_constraintStart_toStartOf="@id/subtitle_motor"
        app:layout_constraintBottom_toBottomOf="@id/info_id_motor"/>
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/info_id_motor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_available"
        android:textColor="?android:attr/textColorSecondary"
        android:fontFamily="@font/rajdhani_regular"
        android:layout_marginStart="96dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@id/subtitle_motor"
        app:layout_constraintTop_toBottomOf="@id/subtitle_motor"/>
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_id_frame"
        android:textColor="?android:attr/textColorSecondary"
        android:fontFamily="@font/rajdhani_regular"
        app:layout_constraintStart_toStartOf="@id/subtitle_motor"
        app:layout_constraintBottom_toBottomOf="@id/info_id_frame"/>
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/info_id_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_available"
        android:textColor="?android:attr/textColorSecondary"
        android:fontFamily="@font/rajdhani_regular"
        android:layout_marginStart="96dp"
        app:layout_constraintStart_toStartOf="@id/subtitle_motor"
        app:layout_constraintTop_toBottomOf="@id/info_id_motor"/>

    <!-- BATTERY INFORMATION -->
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/subtitle_battery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/baterai"
        android:textColor="?android:attr/textColor"
        android:fontFamily="@font/rajdhani_medium"
        android:layout_marginTop="0dp"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toBottomOf="@id/info_id_frame"
        app:layout_constraintStart_toStartOf="parent"
        />
    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="?android:attr/textColorSecondary"
        android:layout_marginTop="14dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/info_id_frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_id_battery"
        android:textColor="?android:attr/textColorSecondary"
        android:fontFamily="@font/rajdhani_regular"
        app:layout_constraintStart_toStartOf="@id/subtitle_motor"
        app:layout_constraintBottom_toBottomOf="@id/info_id_battery"/>
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/info_id_battery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_available"
        android:textColor="?android:attr/textColorSecondary"
        android:fontFamily="@font/rajdhani_regular"
        android:layout_marginTop="0dp"
        android:layout_marginStart="96dp"
        app:layout_constraintStart_toStartOf="@id/subtitle_motor"
        app:layout_constraintTop_toBottomOf="@id/subtitle_battery"/>
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_voltage"
        android:textColor="?android:attr/textColorSecondary"
        android:fontFamily="@font/rajdhani_regular"
        app:layout_constraintStart_toStartOf="@id/subtitle_motor"
        app:layout_constraintBottom_toBottomOf="@id/info_voltage"/>
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/info_voltage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_available"
        android:textColor="?android:attr/textColorSecondary"
        android:fontFamily="@font/rajdhani_regular"
        android:layout_marginStart="96dp"
        app:layout_constraintStart_toStartOf="@id/subtitle_motor"
        app:layout_constraintTop_toBottomOf="@id/info_id_battery"/>
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="V"
        android:textColor="?android:attr/textColorSecondary"
        android:fontFamily="@font/rajdhani_regular"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/info_voltage"/>
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_current"
        android:textColor="?android:attr/textColorSecondary"
        android:fontFamily="@font/rajdhani_regular"
        app:layout_constraintStart_toStartOf="@id/subtitle_motor"
        app:layout_constraintBottom_toBottomOf="@id/info_current"/>
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/info_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_available"
        android:textColor="?android:attr/textColorSecondary"
        android:fontFamily="@font/rajdhani_regular"
        android:layout_marginStart="96dp"
        app:layout_constraintStart_toStartOf="@id/subtitle_motor"
        app:layout_constraintTop_toBottomOf="@id/info_voltage"/>
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="A"
        android:textColor="?android:attr/textColorSecondary"
        android:fontFamily="@font/rajdhani_regular"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/info_current"/>
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_level"
        android:textColor="?android:attr/textColorSecondary"
        android:fontFamily="@font/rajdhani_regular"
        app:layout_constraintStart_toStartOf="@id/subtitle_motor"
        app:layout_constraintBottom_toBottomOf="@id/info_level"/>
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/info_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_available"
        android:textColor="?android:attr/textColorSecondary"
        android:fontFamily="@font/rajdhani_regular"
        android:layout_marginStart="96dp"
        app:layout_constraintStart_toStartOf="@id/subtitle_motor"
        app:layout_constraintTop_toBottomOf="@id/info_current"/>
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="%"
        android:textColor="?android:attr/textColorSecondary"
        android:fontFamily="@font/rajdhani_regular"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/info_level"/>
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_temperature"
        android:textColor="?android:attr/textColorSecondary"
        android:fontFamily="@font/rajdhani_regular"
        app:layout_constraintStart_toStartOf="@id/subtitle_motor"
        app:layout_constraintBottom_toBottomOf="@id/info_temperature"/>
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/info_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_available"
        android:textColor="?android:attr/textColorSecondary"
        android:fontFamily="@font/rajdhani_regular"
        android:layout_marginStart="96dp"
        app:layout_constraintStart_toStartOf="@id/subtitle_motor"
        app:layout_constraintTop_toBottomOf="@id/info_level"/>
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="°C"
        android:textColor="?android:attr/textColorSecondary"
        android:fontFamily="@font/rajdhani_regular"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/info_temperature"/>


    <!-- IVC INFORMATION -->
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/subtitle_ivc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ivc"
        android:textColor="?android:attr/textColor"
        android:fontFamily="@font/rajdhani_medium"
        android:layout_marginTop="0dp"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toBottomOf="@id/info_temperature"
        app:layout_constraintStart_toStartOf="parent"
        />
    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="?android:attr/textColorSecondary"
        android:layout_marginTop="14dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/info_temperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_id_ivc"
        android:textColor="?android:attr/textColorSecondary"
        android:fontFamily="@font/rajdhani_regular"
        app:layout_constraintStart_toStartOf="@id/subtitle_motor"
        app:layout_constraintBottom_toBottomOf="@id/info_id_ivc"/>
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/info_id_ivc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_available"
        android:textColor="?android:attr/textColorSecondary"
        android:fontFamily="@font/rajdhani_regular"
        android:layout_marginStart="96dp"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toStartOf="@id/subtitle_motor"
        app:layout_constraintTop_toBottomOf="@id/subtitle_ivc"/>
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_ivc_status"
        android:textColor="?android:attr/textColorSecondary"
        android:fontFamily="@font/rajdhani_regular"
        app:layout_constraintStart_toStartOf="@id/subtitle_motor"
        app:layout_constraintBottom_toBottomOf="@id/info_ivc_status"/>
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/info_ivc_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_available"
        android:textColor="?android:attr/textColorSecondary"
        android:fontFamily="@font/rajdhani_regular"
        android:layout_marginStart="96dp"
        app:layout_constraintStart_toStartOf="@id/subtitle_motor"
        app:layout_constraintTop_toBottomOf="@id/info_id_ivc"/>
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_ivc_battery"
        android:textColor="?android:attr/textColorSecondary"
        android:fontFamily="@font/rajdhani_regular"
        app:layout_constraintStart_toStartOf="@id/subtitle_motor"
        app:layout_constraintBottom_toBottomOf="@id/info_ivc_battery"/>
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/info_ivc_battery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_available"
        android:textColor="?android:attr/textColorSecondary"
        android:fontFamily="@font/rajdhani_regular"
        android:layout_marginStart="96dp"
        app:layout_constraintStart_toStartOf="@id/subtitle_motor"
        app:layout_constraintTop_toBottomOf="@id/info_ivc_status"/>
</android.support.constraint.ConstraintLayout>