<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/baseNight">
    <android.support.constraint.Guideline
        android:id="@+id/guide_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informasi_baterai"
        android:textColor="@color/baseDay"
        android:fontFamily="@font/rajdhani_semibold"
        android:textSize="24sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/baseDay"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <!-- INFORMATION -->
    <!-- ID -->
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_id"
        android:textColor="@color/baseDay"
        android:fontFamily="@font/rajdhani_semibold"
        android:textSize="22sp"
        android:layout_marginStart="24dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guide_vertical"
        app:layout_constraintBottom_toBottomOf="@id/bat_id"
        />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/bat_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="2235434xxxxx"
        android:text="@string/not_available"
        android:textColor="@color/baseDay"
        android:fontFamily="@font/rajdhani_semibold"
        android:textSize="22sp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/guide_vertical"
        />

    <!-- LEVEL -->
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_level"
        android:textColor="@color/baseDay"
        android:fontFamily="@font/rajdhani_semibold"
        android:textSize="22sp"
        android:layout_marginStart="24dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guide_vertical"
        app:layout_constraintBottom_toBottomOf="@id/bat_level"
        />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/bat_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="70 %"
        android:text="@string/not_available"
        android:textColor="@color/baseDay"
        android:fontFamily="@font/rajdhani_semibold"
        android:textSize="22sp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bat_id"
        app:layout_constraintStart_toStartOf="@id/guide_vertical"
        />

    <!-- VOLTAGE -->
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_voltage"
        android:textColor="@color/baseDay"
        android:fontFamily="@font/rajdhani_semibold"
        android:textSize="22sp"
        android:layout_marginStart="24dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guide_vertical"
        app:layout_constraintBottom_toBottomOf="@id/bat_voltage"
        />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/bat_voltage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="102 V"
        android:text="@string/not_available"
        android:textColor="@color/baseDay"
        android:fontFamily="@font/rajdhani_semibold"
        android:textSize="22sp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bat_level"
        app:layout_constraintStart_toStartOf="@id/guide_vertical"
        />

    <!-- CURRENT -->
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_current"
        android:textColor="@color/baseDay"
        android:fontFamily="@font/rajdhani_semibold"
        android:textSize="22sp"
        android:layout_marginStart="24dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guide_vertical"
        app:layout_constraintBottom_toBottomOf="@id/bat_current"
        />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/bat_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="10 A"
        android:text="@string/not_available"
        android:textColor="@color/baseDay"
        android:fontFamily="@font/rajdhani_semibold"
        android:textSize="22sp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bat_voltage"
        app:layout_constraintStart_toStartOf="@id/guide_vertical"
        />

    <!-- TEMPERATURE -->
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_temperature"
        android:textColor="@color/baseDay"
        android:fontFamily="@font/rajdhani_semibold"
        android:textSize="22sp"
        android:layout_marginStart="24dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guide_vertical"
        app:layout_constraintBottom_toBottomOf="@id/bat_temperature"
        />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/bat_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="30 °C"
        android:text="@string/not_available"
        android:textColor="@color/baseDay"
        android:fontFamily="@font/rajdhani_semibold"
        android:textSize="22sp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/bat_current"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guide_vertical"
        />

</android.support.constraint.ConstraintLayout>