<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="180dp"
    android:background="@color/baseNight"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.Guideline
        android:id="@+id/guide_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"
        />
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/reset_tripmeter"
        android:gravity="center"
        android:textColor="@color/baseDay"
        android:textSize="24sp"
        android:fontFamily="@font/rajdhani_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guide_horizontal"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/baseDay"
        app:layout_constraintBottom_toBottomOf="@id/guide_horizontal"
        />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/positive_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/choice_positive"
        android:gravity="center"
        android:textColor="@color/baseDay"
        android:textSize="24sp"
        android:fontFamily="@font/rajdhani_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/separator"
        app:layout_constraintTop_toTopOf="@id/guide_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:clickable="true"
        android:focusable="true"
        />
    <View
        android:id="@+id/separator"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/baseDay"
        app:layout_constraintStart_toEndOf="@id/positive_button"
        app:layout_constraintEnd_toStartOf="@id/negative_button"
        app:layout_constraintTop_toTopOf="@id/guide_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/negative_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/choice_cancel"
        android:gravity="center"
        android:textColor="@color/baseDay"
        android:textSize="24sp"
        android:fontFamily="@font/rajdhani_medium"
        app:layout_constraintStart_toEndOf="@id/separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guide_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:clickable="true"
        android:focusable="true"
        />

</android.support.constraint.ConstraintLayout>